--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.0",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
+    "material": "^0.9.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.2",
+    "ui": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
