--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 backend/.env
 backend/node_modules/
+frontend/node_modules/
+frontend/logs
+frontend/*.log
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/pnpm-debug.log*
+frontend/lerna-debug.log*
 
+frontend/dist
+frontend/dist-ssr
+frontend/*.local
